[project]
name = "easy-access-sheets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "duckdb>=1.0.0",

    "pyarrow>=17.0.0",

    "polars>=1.6.0",

    "xlsxwriter>=3.2.0",

    "rich>=13.8.0",

    "fastexcel>=0.11.6",

    "python-dotenv>=1.0.1",
]
